--- a/project/.classpath
+++ b/project/.classpath
@@ -24,5 +24,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/FATIH.IDGU/Downloads/Yeni klasör/cdi-api-2.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
